--- a/vagrant/playbook.yml
+++ b/vagrant/playbook.yml
@@ -24,7 +24,7 @@
       with_items:
         - git
         - gcc
-        - gcc-g++
+        - gcc-c++
         - python-virtualenv
         - python-devel
         - PyYAML
