Add more matplotlib build deps

--- a/vagrant/playbook.yml
+++ b/vagrant/playbook.yml
@@ -64,6 +64,8 @@
         - requests
         - requests_cache
         - matplotlib
+        - freetype-devel
+        - libpng-devel
       tags:
         - application
 
