Add tags to numpy workarounds

--- a/vagrant/playbook.yml
+++ b/vagrant/playbook.yml
@@ -62,10 +62,14 @@
         virtualenv_site_packages: yes
       with_items:
         - argparse
+      tags:
+        - application
 
     # workaround for numpy version conflict with site-packages
     - name: force numpy upgrade
       shell: source ~/statsapp/bin/activate ; pip install numpy --upgrade
+      tags:
+        - application
 
     # NOTE: gcc fails to build numpy if memory <2GB
     - name: install requisite pylibs
