Fix refactor bug

--- a/vagrant/playbook.yml
+++ b/vagrant/playbook.yml
@@ -113,6 +113,7 @@
         executable: /bin/bash
       tags:
         - application
+        - reinstall
 
 - name: report execution
   hosts: all
